--- a/server/package.json
+++ b/server/package.json
@@ -6,5 +6,8 @@
   "devDependencies": {
     "json-server": "^0.16.3",
     "json-server-auth": "^2.0.2"
+  },
+  "scripts": {
+    "start":"node index.js"
   }
 }
