add env to store

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "dev:front": "vite",
     "dev:back": "cd server && node ./index.js",
     "dev": "npm-run-all --parallel dev:*",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --mode production",
     "serve": "vite preview",
     "e2e:open": "cypress open",
     "e2e:run": "cypress run",
-    "test":"start-server-and-test yarn dev http://localhost:8000 e2e:open"
+    "test":"start-server-and-test yarn dev http://localhost:8000 e2e:open",
+    "deploy:back:" :"git subtree push --prefix server heroku master"
   },
   "dependencies": {
     "react": "^17.0.0",
